# phantom_mcp

./: .gitignore  3d_ripper_coffee.html  3d_ripper_demo.html  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  TODO.md  clone_daofor.py  demo.py  forgex_audit.py  forgex_showcase.html  last_report_path.txt  pyproject.toml  setup.bat  setup.sh  test_container.py  test_prompt.py  test_ripper.py
.github/workflows/: test.yml
engine/: __init__.py
engine/src/: __init__.py  dom_mapper.js  ghost_browser.py  ghost_deconstructor.py  ghost_reporter.py  server.py
engine/src/skills/: agentic_freedom.md  competitor_analysis.md  copy_critic.md  creative_director.md  performance_profiler.md  phantom_architect.md  responsive_stress_test.md
examples/: mirror_linear.py  performance_benchmark.py  pro_audit.py  security_audit.py  ui_deconstructor.py
references/: issue-taxonomy.md  scoring-rubrics.md
scripts/: skill_check.py
skills/: accessibility_auditor.md  aesthetic_auditor.md  animation_auditor.md  conversion_optimizer.md  deep_crawler.md  interaction_tester.md  security_scanner.md  visual_forensics.md  visual_regression.md
test/: analysis_loop_test.py  chaingpt_test.py  compare_test.py  engine_test.py  forensic_explanation_demo.py  linkedin_demo.py  mouse_test.py  scroll_test.py  viral_launch_demo.py  vision_test.py
