[project]
name = "site-ghost"
version = "1.1.0"
description = "Agentic UI/UX visual auditor with precision DOM mapping and live Playwright video recording."
authors = [{name = "Raj", email = "rajbazx@gmail.com"}]
requires-python = ">=3.10"
dependencies = [
    "mcp",
    "playwright",
    "Pillow",
    "nest-asyncio"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "ruff"
]

[project.scripts]
phantom-mcp = "engine.src.server:main"
site-ghost = "engine.src.server:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["engine*"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
